# hx_Sentry_2025

./: README.md  real_mapping.sh  real_nav.sh  sim_mapping.sh  sim_nav.sh  transhform_map_to_odom.sh
auto_aim_interfaces/: CMakeLists.txt  package.xml
rm_decision_interfaces/: CMakeLists.txt  package.xml
rm_decision_interfaces/msg/: Flag.msg  NavFlag.msg  RadarMode.msg  RobotStatus.msg  Yaw.msg
rm_driver/src/config/: MID360_config.json  mixed_doubleMID360_config.json
rm_driver/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
rm_driver/src/launch/: msg_MID360_launch.py  rviz_MID360_launch.py
rm_driver/src/src/comm/: pub_handler.cpp  pub_handler.h
rm_localization/FAST_LIO/Log/: mat_pre.txt
rm_localization/FAST_LIO/bag/HX_map.bag/: metadata.yaml
rm_localization/FAST_LIO/config/: mid360.yaml  mid360_down.yaml
rm_localization/FAST_LIO/launch/: mapping_mid360.launch.py
rm_localization/FAST_LIO/src/: laserMapping.cpp
rm_localization/Point-LIO_cxr/PCD/: .output.pcd.swp
rm_localization/Point-LIO_cxr/config/: mid360_inverse.yaml
rm_localization/Point-LIO_cxr/launch/: mapping_mid360.launch.py
rm_localization/Point-LIO_cxr/rviz_cfg/: loam_livox.rviz
rm_localization/Point-LIO_cxr/src/: laserMapping.cpp  parameters.cpp  parameters.h
rm_localization/icp_registration/: CMakeLists.txt
rm_localization/icp_registration/config/: icp.yaml
rm_localization/icp_registration/include/icp_registration/: icp_registration.hpp
rm_localization/icp_registration/launch/: icp.launch.py
rm_localization/icp_registration/src/: icp_registration.cpp
rm_localization/point_lio/: CMakeLists.txt  README.md  package.xml
rm_localization/point_lio/PCD/: readme.md
rm_localization/point_lio/config/: avia.yaml  horizon.yaml  mid360.yaml  ouster64.yaml  velody16.yaml
rm_localization/point_lio/include/: common_lib.h  matplotlibcpp.h
rm_localization/point_lio/include/ivox/: eigen_types.h  hilbert.hpp  ivox3d.h  ivox3d_node.hpp
rm_localization/point_lio/launch/: point_lio.launch.py
rm_localization/point_lio/rviz_cfg/: loam_livox.rviz
rm_localization/point_lio/src/: Estimator.cpp  IMU_Processing.cpp  IMU_Processing.h  laserMapping.cpp  li_initialization.cpp  li_initialization.h  parameters.cpp  parameters.h  preprocess.cpp  preprocess.h
rm_localization/small_gicp_relocalization/: CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml
rm_localization/small_gicp_relocalization/include/small_gicp_relocalization/: small_gicp_relocalization.hpp
rm_localization/small_gicp_relocalization/launch/: small_gicp_relocalization_launch.py
rm_localization/small_gicp_relocalization/src/: small_gicp_relocalization.cpp
rm_nav_bringup/: CMakeLists.txt  package.xml
rm_nav_bringup/behavior_tree/: navigate_through_pose_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml
rm_nav_bringup/config/: mapper_params_online_async.yaml  nav2_params_33.yaml  nav2_params_331.yaml  nav2_params_332.yaml
rm_nav_bringup/launch/: bringup_launch.py  bringup_no_amcl_launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  rviz_launch.py  slam_launch.py  slam_localization_launch.py
rm_nav_bringup/map/: 1.pgm  1.yaml  RMUC.pgm  RMUC.yaml  RMUC1.pgm  RMUC1.yaml  b.pgm  b.yaml  blue.pgm  blue.yaml  r.pgm  r.yaml  red.pgm  red.yaml
rm_nav_bringup/rviz/: RMUC.rviz  nav2.rviz
rm_navigation/nav2_navfn_planner/src/: navfn.cpp  navfn_planner.cpp
rm_navigation/nav2_planner/: CMakeLists.txt  package.xml
rm_navigation/nav2_planner/include/nav2_planner/: planner_server.hpp
rm_navigation/nav2_planner/src/: planner_server.cpp
rm_navigation/nav2_smac_planner/: README.md
rm_navigation/nav2_smac_planner/src/: a_star.cpp  collision_checker.cpp  smac_planner_hybrid.cpp  smoother.cpp
rm_navigation/pb_nav2_plugins/: CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md  behavior_plugin.xml  costmap_plugins.xml  package.xml
rm_navigation/pb_nav2_plugins/include/pb_nav2_plugins/behaviors/: back_up_free_space.hpp
rm_navigation/pb_nav2_plugins/include/pb_nav2_plugins/layers/: intensity_voxel_layer.hpp
rm_navigation/pb_nav2_plugins/src/behaviors/: back_up_free_space.cpp
rm_navigation/pb_nav2_plugins/src/layers/: intensity_voxel_layer.cpp
rm_navigation/pb_omni_pid_pursuit_controller/: CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml
rm_navigation/pb_omni_pid_pursuit_controller/src/: omni_pid_pursuit_controller.cpp  pid.cpp
rm_perception/cloud_process/: CMakeLists.txt  README.md  package.xml
rm_perception/cloud_process/config/: cloud_process.yaml
rm_perception/cloud_process/include/cloud_process/: cloud_process.hpp
rm_perception/cloud_process/launch/: cloud_process.launch.py
rm_perception/cloud_process/src/: cloud_process.cpp
rm_perception/imu_complementary_filter/launch/: complementary_filter.launch.py
rm_perception/linefit_ground_segementation_ros2/linefit_ground_segmentation_ros/: package.xml
rm_perception/merge_cloud_code/: CMakeLists.txt  README.md  package.xml
rm_perception/merge_cloud_code/launch/: merge_cloud_code.launch.py
rm_perception/merge_cloud_code/src/: merge_cloud_code.cpp
rm_perception/pointcloud_to_laserscan/launch/: pointcloud_to_laserscan_launch.py
rm_perception/terrain_analysis/: CMakeLists.txt  package.xml
rm_perception/terrain_analysis/launch/: terrain_analysis.launch
rm_perception/terrain_analysis/src/: terrainAnalysis.cpp
rm_perception/terrain_analysis_ext/: CMakeLists.txt  package.xml
rm_perception/terrain_analysis_ext/launch/: terrain_analysis_ext.launch
rm_perception/terrain_analysis_ext/src/: terrainAnalysisExt.cpp
rm_simulation/livox_laser_simulation_RO2/urdf/: mid360.xacro
rm_simulation/pb_rm_simulation/: README.md
rm_simulation/pb_rm_simulation/launch/: rm_real.launch.py  rm_simulation.launch.py
rm_simulation/pb_rm_simulation/urdf/: real_waking_robot_2025.xacro  real_waking_robot_gou.xacro  real_waking_robot_gou1.xacro  simulation_waking_robot.xacro  simulation_waking_robot1.xacro  simulation_waking_robot_hx.xacro
(+17 files in other folders)
